--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
         <h3 class="api-title"><i class="fas fa-venus-mars"></i> Identificador de Gênero</h3>
         <div class="endpoint">
           <span class="method get">GET</span>
-          <span class="path">/identificador-genero?nome=Lucas</span>
+          <span class="path">/genero?nome=Lucas</span>
         </div>
         <p>Detecta o provável gênero associado a um nome fornecido. Usa um modelo estatístico baseado em nomes comuns.</p>
 
