--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
         <h3 class="api-title"><i class="fas fa-film"></i> Perfil Netflix</h3>
         <div class="endpoint">
           <span class="method get">GET</span>
-          <span class="path">/api/netflix-profile?nome=Convidado</span>
+          <span class="path">/netflix-profile?nome=Convidado</span>
         </div>
         <p>Gera um perfil fictício no estilo Netflix com avatar e cor personalizada.</p>
         
@@ -455,7 +455,7 @@
 
   <div class="endpoint">
     <span class="method post">POST</span>
-    <span class="path">/api/pix</span>
+    <span class="path">/pix</span>
   </div>
 
   <p>Gera um QR Code PIX com payload e imagem em base64 para pagamentos instantâneos.</p>
