--- a/index.html
+++ b/index.html
@@ -595,11 +595,11 @@
     <div class="container footer-content">
       <p>Desenvolvido por <strong>Nickolas</strong></p>
       <div class="social-links">
-        <a href="#" aria-label="GitHub"><i class="fab fa-github"></i></a>
+        <a href="https://github.com/aglsk" aria-label="GitHub"><i class="fab fa-github"></i></a>
         <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
         <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
       </div>
-      <p class="copyright">© 2023 API Utilitários. Todos os direitos reservados.</p>
+      <p class="copyright">© 2025 API Utilitários. Todos os direitos reservados.</p>
     </div>
   </footer>
 
