--- a/index.html
+++ b/index.html
@@ -702,7 +702,7 @@
 
     <div class="note">
       <div class="note-title"><i class="fas fa-info-circle"></i> Nota</div>
-      <p>Os dados são atualizados diariamente e representam apenas jogos finalizados. Para consultar partidas futuras ou em andamento, utilize os endpoints apropriados fornecidos pela TheSportsDB.</p>
+      <p>Os dados são atualizados diariamente e representam apenas jogos finalizados. (Em breve Melhorias).</p>
     </div>
   </div>
 </section>
