--- a/index.html
+++ b/index.html
@@ -713,7 +713,7 @@
     <h3 class="api-title"><i class="fas fa-dollar-sign"></i> Conversor de Moeda</h3>
     <div class="endpoint">
       <span class="method get">GET</span>
-      <span class="path">/conversor</span>
+      <span class="path">/conversor?de=USD&para=BRL&valor=10</span>
     </div>
     <p>Converte um valor de uma moeda para outra com base nas cotações em tempo real.</p>
 
